Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
-html, body {
-  height: 100%;
-}
 #root {
   height: 100%;
+  overflow: hidden;
 }
 #container {
   width: 100%;
